Bug 1406358 - Keep SpeechDelegate object until speaking is finished. r=eeejay, a=ritu

The delegate property of NSSpeechSynthesizer doesn't seem to add refcount from 10.13, so we have to keep SpeechDelegate object until speech is finished.

MozReview-Commit-ID: EVtMOPytkjR